WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
120493
[BlackBerry] Scrolling text with FCC does not work while composing an email
https://bugs.webkit.org/show_bug.cgi?id=120493
Summary
[BlackBerry] Scrolling text with FCC does not work while composing an email
Jacky Jiang
Reported
2013-08-29 14:42:19 PDT
JIRA 468007.
Attachments
Patch
(2.14 KB, patch)
2013-08-29 15:19 PDT
,
Jacky Jiang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jacky Jiang
Comment 1
2013-08-29 15:19:32 PDT
Created
attachment 210037
[details]
Patch
Rob Buis
Comment 2
2013-08-29 15:27:48 PDT
Comment on
attachment 210037
[details]
Patch LGTM.
WebKit Commit Bot
Comment 3
2013-08-29 15:59:51 PDT
Comment on
attachment 210037
[details]
Patch Clearing flags on attachment: 210037 Committed
r154849
: <
http://trac.webkit.org/changeset/154849
>
WebKit Commit Bot
Comment 4
2013-08-29 15:59:53 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug